# deepreefmap

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
camera_profiles/: example_linear.json  gopro_hero_10.json  guilhems_camera.json
configs/: model_zoo.yaml  taxonomy_coralscapes.yaml
deepreefmap/: __init__.py
deepreefmap/camera/: colmap_calibration.py  intrinsics.py  rectification.py
deepreefmap/cli/: main.py
deepreefmap/config/: __init__.py  classes.py  taxonomy.py
deepreefmap/io/: exports.py  video.py
deepreefmap/mapping/: base.py  gravity.py  loger_backend.py  registry.py  scsfm_backend.py  scsfmlearner_backend.py
deepreefmap/mapping/scsfmlearner/: __init__.py  models.py
deepreefmap/mapping/scsfmlearner/training/: __init__.py  dataset.py  losses.py  prepare_dataset.py  train.py  transforms.py  warping.py
deepreefmap/pipeline/: artifacts.py  orchestrator.py  preprocess_cache.py  resume.py  run_loader.py
deepreefmap/pointcloud/: filters.py  grid_ortho.py  ortho.py  transect_crop.py  tsdf.py  tsdf_align.py  unprojection.py
deepreefmap/postproc/: benthic_cover.py  ortho_outputs.py  reports.py
deepreefmap/resources/: __init__.py
deepreefmap/resources/camera_profiles/: gopro_hero_10.json
deepreefmap/resources/configs/: classes_coralscapes.yaml  model_zoo.yaml
deepreefmap/segmentation/: base.py  dinov3_dpt.py  registry.py  segformer.py
deepreefmap/telemetry/: __init__.py  gopro.py
deepreefmap/visualization/: __init__.py  final_cloud_index.py  live_frame_cloud.py  simple_viser_app.py  viser_app.py  viser_scene.py
tests/: test_classes.py  test_cli_reconstruct_scsfmlearner.py  test_exports.py  test_final_cloud_index.py  test_grid_ortho.py  test_intrinsics_refinement_orchestrator.py  test_live_frame_cloud_lut.py  test_loger_adapter_contract.py  test_mapping_gravity.py  test_mapping_registry.py  test_ortho_outputs.py  test_packaged_resources.py  test_pointcloud_filters.py  test_prepare_frames_batch.py  test_render_manifest_contract.py  test_resume.py  test_run_loader.py  test_scsfmlearner_backend.py  test_taxonomy.py  test_telemetry_gopro.py  test_tsdf_align.py  test_video_frames.py  test_viser_frame_slider.py
